--- a/Calc_bmi/src/main/webapp/index.xhtml
+++ b/Calc_bmi/src/main/webapp/index.xhtml
@@ -5,7 +5,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
-	<title>Kalkulator BMI</title>
+	<title>Kalkulator BMII</title>
 </h:head>
 <h:body>
 
