--- a/Calc_bmi/src/main/webapp/index.xhtml
+++ b/Calc_bmi/src/main/webapp/index.xhtml
@@ -3,29 +3,43 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<title>Kalkulator BMII</title>
 </h:head>
 <h:body>
-
-	<h1>Kalkulator BMI</h1>
+<p:panel header="Kalkulator BMI" style="margin:1em auto;" toggleable="true" closable="true" toggleSpeed="500"
+                closeSpeed="500" widgetVar="panel">
+	
 
 	<h:form id="bla">
-  		Waga: <h:inputText value="#{calcBB.weight}" />
-		<br />
-  		Wzrost: <h:inputText value="#{calcBB.height}" />
-		<br />
-		<h:messages id="msg" />
+	
+	 <h:panelGrid id="grid" columns="3" cellpadding="7">
+	 
+	 <p:outputLabel for="weight" value="Waga: "/>
+  	 <p:inputText id="weight" value="#{calcBB.weight}" required="true" requiredMessage="Brak wagi"/>
+  	 <p:message for="weight"/>	 
+  		 
+  		 
+  	 <p:outputLabel for="height" value="Wzrost: "/>
+     <p:inputText id="height" value="#{calcBB.height}"  required="true" requiredMessage="Brak wzrostu"/>
+	 <p:message for="height"/>	
+		
 
-		<h:commandButton value="Oblicz" action="#{calcBB.calc()}"/>
-		<br />
-		<h:commandButton value="Oblicz (AJAX)" action="#{calcBB.calc_AJAX()}">
-			<f:ajax execute="@form" render="msg" />
-		</h:commandButton>
-		<br />
-		<h:commandLink value="Informacje" action="#{calcBB.info()}" />
+		<p:commandButton value="Oblicz" action="#{calcBB.calc()}" update="@form"/>
+		<p:commandButton value="Oblicz (AJAX)" action="#{calcBB.calc_AJAX()}" update="msg"/>
+			
+		<p:commandButton type="button" value="Info" styleClass="ui-button-raised ui-button-info ui-button-flat"  action="#{calcBB.info()}"/>
+
+		
+	</h:panelGrid>	
+	
+	<p:messages id="msg" />
+	
+	
+	
 	</h:form>
-
+</p:panel>
 </h:body>
 </html>
