--- a/Calc_bmi/src/main/webapp/info.xhtml
+++ b/Calc_bmi/src/main/webapp/info.xhtml
@@ -3,7 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+      >
 <h:head>
 <title>Informacje</title>
 </h:head>
@@ -12,7 +14,7 @@
 
 Pusta strona przykładowa ...
 <h:form>
-<h:commandLink value="Strona główna" action="index"/>
+<p:commandLink value="Strona główna" action="index"/>
 </h:form>
 
 </h:body></html>
