--- a/Calc_bmi/src/main/webapp/showresult.xhtml
+++ b/Calc_bmi/src/main/webapp/showresult.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	 xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<title>Wynik</title>
 </h:head>
@@ -11,7 +12,7 @@
 	<h:messages />
 	wynik: #{calcBB.result}
 	<h:form>
-		<h:commandButton value="Powrót" action="index" />
+		<p:commandButton value="Powrót" action="index" />
 	</h:form>
 </h:body>
 </html>
