Drobne zmiany kosmetyczne

--- a/Calc_bmi/src/main/webapp/index.xhtml
+++ b/Calc_bmi/src/main/webapp/index.xhtml
@@ -18,7 +18,7 @@
 
 	<h:form id="bla">
 	
-	 <h:panelGrid id="grid" columns="3" cellpadding="7" >
+	 <p:panelGrid id="grid" styleClass="ui-panelgrid-blank ui-fluid"  columns="3" cellpadding="7" >
 	 
 	 <p:outputLabel for="weight" value="Waga: "/> 
   	 <p:inputNumber id="weight" value="#{calcBB.weight}" minValue="1"
@@ -40,7 +40,7 @@
 		
 		
 		
-	</h:panelGrid>	
+	</p:panelGrid>	
 	
 	<p:messages id="msg"  closable="true">
             <p:autoUpdate/>
